--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -61,7 +61,7 @@ h3 {
   font-family: Roboto, sans-serif;
 }
 
-.content {
+.content, .top-nav {
   max-width: 70%;
   padding: 0 124px;
   margin: 0 auto;
@@ -116,6 +116,17 @@ h3 {
         font-size: 1.2em;
       }
     }
+  }
+
+  .brand {
+    width: 60px;
+    height: 60px;
+    align-self: center;
+    flex-grow: 1;
+  }
+
+  .brand-avatar {
+    height: 100%;
   }
 }
 
