--- a/assets/scss/_list.scss
+++ b/assets/scss/_list.scss
@@ -1,8 +1,9 @@
-ul {
+.generic-listing {
+  list-style-type: none;
   font-family: Cantarell, sans-serif;
 }
 
-li {
+.generic-li {
   display: flex;
   line-height: 1.3;
   padding: 0.3em 0;
@@ -20,35 +21,34 @@ li {
   flex-shrink: 0;
 
   &--blog {
-    background-image: url('../images/icons/post.svg');
+    background-image: url('/assets/images/icons/post.svg');
   }
 
   &--talks {
-    background-image: url('../images/icons/talk.svg');
+    background-image: url('/assets/images/icons/talk.svg');
   }
 
   &--poems {
-    background-image: url('../images/icons/poems.svg');
+    background-image: url('/assets/images/icons/poems.svg');
     background-size: contain;
   }
 }
 
-li.title {
+.generic-li-title {
   font-size: 1.2em;
 }
 
-li.meta {
+.generic-li-meta {
   margin-top: 0.5em;
   font-size: 0.6em;
 }
 
-li.meta, li.meta a {
+.generic-li-meta, .generic-li-meta a {
   font-family: Roboto, sans-serif;
   color: $secondary-color;
   display: flex;
 
   .meta-item {
-    border-right: 1px solid $separator;
     line-height: 1;
     padding: 0;
     padding-right: 1em;
