fix: stuff on about/home page
Add twitter instead of stackoverflow

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -169,7 +169,7 @@ pre {
 .postamble {
   font-family: monospace;
   color: #666;
-  margin: 4rem 0;
+  margin: 4rem auto;
 
   .validation {
     display: none;
